# zks

./: .gitignore  ANDROID_AAR_STATUS.md  AWS+Open+Source+Credits+Application+Form.xlsx  AWS_CREDITS_APPLICATION_GUIDE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Critical Issues.md  Entropy_Grid.md  LICENSE  LITERATURE_REVIEW_SECRYPT2026.md  README.md  SECRYPT_2026_PAPER_PLAN.md  SECURITY.md  ZKS Protocol SDK - Implementation Roadma.md  ZKS_CHAT.MD  ZKS_MCP_SERVER_ROADMAP.md  ZKS_SUSTAINABILITY_MODEL.md  build-android-aar.bat  build-android-aar.sh  medium_post_wasif_vernam.md  plan.md  review.md  zks.excalidraw  🧅 ZKS Protocol - P2P Onion Routing.md
.github/workflows/: ci.yml
android/: BUILD_GUIDE.md  build-android.sh  build.gradle  gradlew.bat  settings.gradle
android/zks-uniffi/: build.gradle
android/zks-uniffi/src/main/: AndroidManifest.xml
bindings/com/zks/uniffi/: test.kt  zks_uniffi.kt
bindings/kotlin/: test_zks_meet_client.kt
bindings/kotlin/com/zks/uniffi/: zks_uniffi.kt
crates/zks_cover/: Cargo.toml  README.md
crates/zks_cover/benches/: cover_traffic_bench.rs
crates/zks_cover/examples/: cover_traffic.rs
crates/zks_cover/src/: config.rs  error.rs  generator.rs  lib.rs  mixing_delay.rs  scheduler.rs  transport.rs  types.rs
crates/zks_cover/tests/: cover_traffic_tests.rs
crates/zks_crypt/: Cargo.toml  README.md
crates/zks_crypt/benches/: crypto_bench.rs  erasure_ratchet_bench.rs  hybrid_ratchet_bench.rs  ml_kem_bench.rs  session_rotation_bench.rs  wasif_vernam_bench.rs
crates/zks_crypt/src/: anti_replay.rs  constant_time.rs  debug_test.rs  drand.rs  entropy_block.rs  entropy_provider.rs  erasure_ratchet.rs  high_entropy_cipher.rs  hybrid_computational.rs  hybrid_otp.rs  hybrid_ratchet.rs  lib.rs  phase5_test.rs  prelude.rs  recursive_chain.rs  scramble.rs  session_rotation.rs  true_entropy.rs  true_vernam.rs  wasif_vernam.rs
crates/zks_crypt/tests/: adversarial_test.rs  circuit_security_test.rs  debug_size.rs  hop_anonymity_test.rs  pq_handshake_test.rs  property_entropy_block.proptest-regressions  property_entropy_block.rs  traffic_analysis_test.rs  wasif_vernam_security_test.rs
crates/zks_mcp/src/tools/: analysis.rs  crypto.rs
crates/zks_otp/: Cargo.toml  README.md  decrypted_message.txt  decrypted_message2.txt  encrypted_message.zksenc  encrypted_message2.zksenc  test_hardware.zkskey  test_key.zkskey  test_key2.zkskey  test_message.txt  usage_demo.md
crates/zks_otp/src/: error.rs  hardware_rng.rs  key_file.rs  lib.rs  otp_cipher.rs  shredder.rs
crates/zks_pqcrypto/: Cargo.toml  README.md
crates/zks_pqcrypto/benches/: comparative_bench.rs  incremental_mlkem_bench.rs
crates/zks_pqcrypto/src/: errors.rs  incremental_mlkem.rs  katana_rkem.rs  lib.rs  libcrux_test.rs  ml_dsa.rs  ml_kem.rs  prelude.rs
crates/zks_proto/: Cargo.toml  README.md
crates/zks_proto/src/: error.rs  handshake.rs  lib.rs  messages.rs  url.rs
crates/zks_proto/tests/: handshake_edge_case_tests.rs
crates/zks_sdk/: Cargo.toml
crates/zks_sdk/src/: builder.rs  config.rs  crypto.rs  error.rs  lib.rs  prelude.rs  sdk_crypto.rs  stream.rs
crates/zks_sdk/src/connection/: mod.rs  zk.rs  zks.rs
crates/zks_sdk/src/prefabs/: file_transfer.rs  hybrid_otp_transfer.rs  messenger.rs  mod.rs  p2p.rs
crates/zks_surb/: Cargo.toml  README.md
crates/zks_surb/benches/: surb_bench.rs
crates/zks_surb/examples/: anonymous_reply.rs
crates/zks_surb/src/: config.rs  encryption.rs  error.rs  lib.rs  storage.rs  surb.rs  surb_utils.rs
crates/zks_surb/tests/: surb_integration.rs  surb_tests.rs
crates/zks_types/: Cargo.toml  README.md
crates/zks_types/src/: lib.rs
crates/zks_types/src/crypto/: mod.rs
crates/zks_types/src/errors/: mod.rs
crates/zks_wasm/: Cargo.toml  README.md  demo.html  test_wasm.js
crates/zks_wasm/examples/: browser_example.js  demo.html  index.html
crates/zks_wasm/src/: bindings.rs  js_api.rs  lib.rs  transport.rs
crates/zks_wasm/tests/: web.rs
crates/zks_wire/: Cargo.toml  README.md
crates/zks_wire/benches/: e2e_latency_bench.rs  onion_routing_bench.rs
crates/zks_wire/examples/: simple_test.rs  test_onion_routing.rs  test_stun_nat.rs
crates/zks_wire/src/: circuit.rs  dht_lookup.rs  entropy_cache.rs  entropy_grid.rs  entropy_swarm.rs  error.rs  lib.rs  nat.rs  p2p.rs  relay.rs  seeder.rs  signaling.rs  stun.rs  swarm.rs  swarm_controller.rs  wire.rs
crates/zks_wire/src/faisal_swarm/: cells.rs  circuit_manager.rs  encryption.rs  mod.rs
crates/zks_wire/tests/: entropy_dht_tests.rs  property_entropy_cache.proptest-regressions  property_entropy_cache.rs  property_kademlia_dht.proptest-regressions  property_kademlia_dht.rs  snapshot_block_structures.rs  snapshot_error_messages.rs  snapshot_message_formats.rs  turmoil_gossip.rs
crates/zks_wire/tests/snapshots/: snapshot_error_messages__dht_lookup_in_progress.snap  snapshot_error_messages__dht_max_retries_exceeded.snap  snapshot_error_messages__dht_no_providers_found.snap  snapshot_error_messages__dht_timeout.snap  snapshot_error_messages__drand_api_error.snap  snapshot_error_messages__drand_invalid_input.snap  snapshot_error_messages__drand_network_error.snap  snapshot_error_messages__drand_parse_error.snap  snapshot_error_messages__swarm_encryption_error.snap  snapshot_error_messages__swarm_handshake_failed.snap  snapshot_error_messages__swarm_invalid_state.snap  snapshot_error_messages__swarm_libp2p_error.snap  snapshot_error_messages__swarm_not_enough_peers.snap  snapshot_error_messages__swarm_not_found.snap  snapshot_error_messages__swarm_protocol_error.snap
docs/: HYBRID_OTP_SECURITY_PROOFS.md  MATHEMATICAL_SECURITY_PROOF.md  PEER_REVIEW_DESIGN_AUDIT.md  THREAT_MODEL.md
examples/: anonymous_connection.rs  basic_connection.rs  file_transfer.rs
tests/: integration_tests.rs
verification/: README.md  anti_replay.pv  forward_secrecy.pv  swarm_routing.pv  zks_handshake.cv  zks_handshake.ocv  zks_handshake_kem.cv  zks_handshake_kem.ocv  zks_protocol.pv  zks_simple.ocv
wireguard/: output_referenced.md
(+3 files in other folders)
