[workspace]
members = ["crates/zks_cover", "crates/zks_crypt", "crates/zks_mcp", "crates/zks_pqcrypto", "crates/zks_proto", "crates/zks_sdk", "crates/zks_surb", "crates/zks_types", "crates/zks_uniffi", "crates/zks_wasm", "crates/zks_wire"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["ZKS Protocol Team"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/zks-protocol/zks"
homepage = "https://zks-protocol.org"
keywords = ["zero-knowledge", "post-quantum", "cryptography", "privacy"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# Force vendored OpenSSL for all dependencies
openssl = { version = "0.10", features = ["vendored"] }