[package]
name = "zks_cover"
version = "0.1.0"
edition = "2021"
authors = ["ZKS Protocol Team"]
description = "Cover traffic generation for ZKS Protocol - post-quantum secure anonymity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zks-protocol/zks"
keywords = ["privacy", "anonymity", "cover-traffic", "post-quantum", "cryptography"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core ZKS dependencies
zks_crypt = { path = "../zks_crypt", version = "0.1.0" }
zks_pqcrypto = { path = "../zks_pqcrypto", version = "0.1.0" }
zks_wire = { path = "../zks_wire", version = "0.1.0" }
zks_types = { path = "../zks_types", version = "0.1.0" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Cryptography
rand = "0.8"
rand_distr = "0.4"
chacha20poly1305 = "0.10"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Poisson distribution for timing
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"

[lints.rust]
unsafe_code = "forbid"

[[bench]]
name = "cover_traffic_bench"
harness = false