[package]
name = "zks_crypt"
version = "0.1.0"
edition = "2021"
authors = ["ZKS Protocol Team"]
description = "Cryptographic primitives for ZKS Protocol - post-quantum secure encryption"
license = "AGPL-3.0-only"
repository = "https://github.com/zks-protocol/zks"
homepage = "https://zks-protocol.org"
documentation = "https://docs.rs/zks_crypt"
readme = "README.md"
keywords = ["zero-knowledge", "post-quantum", "cryptography", "encryption", "chacha20"]
categories = ["cryptography", "no-std"]

[dependencies]
zks_types = { path = "../zks_types" }
chacha20poly1305 = "0.10"
chacha20 = "0.9"
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
getrandom = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
ring = "0.17"
subtle = "2.5"

[dev-dependencies]
tokio-test = "0.4"