[package]
name = "zks_surb"
version = "0.1.0"
authors = ["ZKS Protocol Team"]
edition = "2021"
description = "Single-Use Reply Blocks (SURBs) for ZKS Protocol - post-quantum anonymous replies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zks-protocol/zks"
keywords = ["surb", "anonymous", "reply", "post-quantum", "ml-kem", "onion-routing"]
categories = ["cryptography", "network-programming"]

[dependencies]
# ZKS Core Dependencies
zks_pqcrypto = { path = "../zks_pqcrypto", version = "0.1.0" }
zks_crypt = { path = "../zks_crypt", version = "0.1.0" }
zks_wire = { path = "../zks_wire", version = "0.1.0" }

# Cryptography
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
rand = "0.8.5"
zeroize = { version = "1.7.0", features = ["derive"] }

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
base64 = "0.21.7"
hex = "0.4.3"

# Async
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["full"] }

# Error handling
thiserror = "1.0.56"

# Logging
tracing = "0.1.40"

[dev-dependencies]
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0.111"

[lints.rust]
unsafe_code = "forbid"

[[bench]]
name = "surb_bench"
harness = false