[package]
name = "zks_wasm"
version = "0.1.0"
edition = "2021"
authors = ["ZKS Protocol Team"]
description = "WebAssembly bindings for ZKS Protocol SDK"
license = "AGPL-3.0-only"
repository = "https://github.com/zks-protocol/zks"
homepage = "https://zks-protocol.org"
keywords = ["wasm", "webassembly", "javascript", "bindings", "zero-knowledge"]
categories = ["wasm", "cryptography", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM-compatible post-quantum crypto
zks_pqcrypto = { path = "../zks_pqcrypto" }

# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true