[package]
name = "zks_wire"
version = "0.1.0"
edition = "2021"
authors = ["ZK Protocol Team"]
description = "Network primitives for ZK Protocol - NAT traversal, STUN, and swarm networking"
license = "AGPL-3.0-only"
repository = "https://github.com/zks-protocol/zks"
homepage = "https://zks-protocol.org"
documentation = "https://docs.rs/zks_wire"
readme = "README.md"
keywords = ["network", "nat", "stun", "p2p", "wire", "swarm"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Network primitives
bytes = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# STUN/TURN protocols
stun = "0.4"

# UDP networking
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }

# Address resolution
if-addrs = "0.10"
ipnet = "2.9"

# Utilities
rand = "0.8"
getrandom = "0.2"
base64 = "0.21"
url = "2.4"
hex = "0.4"

# Cryptography
zks_crypt = { path = "../zks_crypt" }
zeroize = "1.6"

[dev-dependencies]
tokio-test = "0.4"